Add manifest link and theme color meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>El impostor</title>
+  <link rel="manifest" href="./manifest.json">
+<meta name="theme-color" content="#e34234">
   <style>
     :root{
       --verm:#e34234;
